feat: 사용자 입력 기능 추가 inquirer 모듈 추가 Type Alias enum 사용법

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "homepage": "https://github.com/vmfhrmfoaj-tech/study-typescript#readme",
   "dependencies": {
+    "@types/inquirer": "^8.1.3",
     "concurrently": "^7.0.0",
+    "inquirer": "^8.2.0",
     "nodemon": "^2.0.15"
   },
   "scripts": {
