feat: typeguard 활용

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
-    "start": "concurrently npm:start:*"
+    "start": "concurrently npm:start:*",
+    "todo": "tsc && node ./build/index.js",
+    "sort": "tsc ./src/sorting/Sorter.ts ./src/sorting/index.ts --outDir ./build/sorting && node ./build/sorting/index.js"
   }
 }
