--- a/jest/package.json
+++ b/jest/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage "
+    "test": "jest --coverage",
+    "test:1": "jest ./src/__tests__/01_basic.js",
+    "test:2": "jest ./src/__tests__/02_async.js",
+    "test:3": "jest ./src/__tests__/03_before-after.js",
+    "test:4": "jest ./src/__tests__/04_fn_spy.js --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.26.0",
     "jest": "^27.5.1"
   }
 }
