--- a/jest/package.json
+++ b/jest/package.json
@@ -9,7 +9,8 @@
     "test:2": "jest ./src/__tests__/02_async.js",
     "test:3": "jest ./src/__tests__/03_before-after.js",
     "test:4": "jest ./src/__tests__/04_fn_spy.js",
-    "test:5": "jest ./src/__tests__/05_userService.js --watch"
+    "test:5": "jest ./src/__tests__/05_userService.js --watch",
+    "test:diff": "jest ./src/diff/require.test.js --watch"
   },
   "keywords": [],
   "author": "",
