--- a/typescript/ts-basics/package.json
+++ b/typescript/ts-basics/package.json
@@ -6,5 +6,9 @@
   "devDependencies": {
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/node-fetch": "^2.6.2",
+    "node-fetch": "^2.6.7"
   }
 }
